@@ -1,4 +1,4 @@
-<h1>Instruction for using InvariantsInference</h1>
+<h1>Instruction for using CodeCoverage</h1>
 
 In command line run:
 ```
@@ -18,31 +18,27 @@ Add follwing lines in pom.xml:
 
 ```
 <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>plain</id>
-            <configuration>
-              <includes>
-                <include>**/*Test.java</include>
-              </includes>
-              <runOrder>random</runOrder>
-            </configuration>
-          </execution>
-          <!-- <execution> <id>security-manager-test</id> <phase>integration-test</phase> <goals> <goal>test</goal> </goals> <configuration>
-            <includes> <include>**/*Test.java</include> </includes> <argLine>-Djava.security.manager -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine>
-            </configuration> </execution> -->
-        </executions>
-      <configuration><argLine>-javaagent:/Users/jnc350/Desktop/z/CS6367_Project/InvariantsInference/target/JavaAgent-1.0-SNAPSHOT.jar</argLine><properties><property><name>listener</name><value>cs6367Project.JUnitListener</value></property></properties></configuration></plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <configuration>
+    <argLine>-javaagent:./JavaAgent-1.0-SNAPSHOT.jar
+    </argLine>
+   <properties>
+    <property>
+      <name>listener</name>
+      <value>cs6367Project.JUnitListener</value>
+    </property>
+   </properties>
+  </configuration>
+</plugin>
 ```
-Add JUnit Vintage engine to:
+Modify JUnit version to 4.13:
 ```
 <dependency>
-    <groupId>org.junit.vintage</groupId>
-    <artifactId>junit-vintage-engine</artifactId>
-    <version>5.6.1</version>
-    <scope>test</scope>
+  <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>4.13</version>
+  <scope>test</scope>
 </dependency>
 ```
 Get into the target project folder, and run:
@@ -51,4 +47,11 @@ mvn test
 # Coverage log would be created in folder "coverageLog".
 ```
 
+*Note:*
 
+If you come across a compilation failure which asks you to use the 1.6 or higher version of maven compiler, add the 
+following lines in pom.xml.
+
+    <maven.compiler.compilerVersion>1.6</maven.compiler.compilerVersion>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
